wordpress/templates/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: wordpress
      tier: frontend
    name: wordpress
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: wordpress
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
